z-index: variables [Fixes #88]

--- a/src/assets/less/generic/variables.less
+++ b/src/assets/less/generic/variables.less
@@ -13,6 +13,7 @@
  * .....Family
  * .....Size
  * .....Weight
+ * Z-INDEX
  */
 
 
@@ -111,3 +112,39 @@
 @weight-bold:      700;
 @weight-semi-bold: 600;
 @weight-normal:    400;
+
+
+
+
+
+/* -------------------------------------------------------------------------- *\
+   $Z-INDEX
+\* -------------------------------------------------------------------------- */
+
+/**
+ * Button Dropdown
+ */
+
+@zindex-btn-dropdown:   1000;
+
+/**
+ * Modal
+ */
+
+@zindex-modal:          1050;
+@zindex-modal-close:    1040;
+@zindex-modal-header:   1030;
+@zindex-modal-show:     1020;
+@zindex-modal-overlay:  1000;
+
+/**
+ * Nav Dropdown
+ */
+
+@zindex-nav-dropdown:   1010;
+
+/**
+ * Tooltips
+ */
+
+@zindex-tooltips:       1100;
