--- a/src/assets/less/objects/nav.less
+++ b/src/assets/less/objects/nav.less
@@ -149,7 +149,7 @@
                 margin-top: 0.5em;
                 position: absolute;
                 top: 100%;
-                z-index: 2;
+                z-index: @zindex-nav-dropdown;
             }
         }
 
